--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Stream Player</title>
+    <title>Channel List</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
     <style>
         body {
             background: linear-gradient(145deg, #121212, #2c2c2c);
@@ -22,16 +19,6 @@
             min-height: 100vh;
         }
 
-        #videoContainer {
-            max-width: 900px;
-            width: 95%;
-            background: rgba(30, 30, 30, 0.95);
-            border-radius: 20px;
-            padding: 20px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.7);
-            display: none; /* Initially hidden */
-        }
-
         h1 {
             text-align: center;
             font-size: 2.5rem;
@@ -39,70 +26,41 @@
             color: #f7f7f7;
         }
 
-        #player {
-            border-radius: 15px;
-            width: 100%;
-            height: 500px;
-        }
-
-        #liveIndicator {
-            background: #e91e63;
-            color: white;
-            padding: 5px 10px;
-            border-radius: 5px;
-            font-size: 0.9rem;
-            font-weight: bold;
-            position: absolute;
-            top: 10px;
-            left: 10px;
-        }
-
-        .footer {
-            font-size: 0.9rem;
-            margin-top: 30px;
-            color: rgba(255, 255, 255, 0.6);
-        }
-
-        .footer a {
-            color: #1a73e8;
-            text-decoration: none;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-
-        /* Channel List */
-        #channel-list {
+        .channel-list {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             gap: 15px;
-            margin-bottom: 20px;
+            margin-top: 20px;
         }
 
         .channel {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
             width: 150px;
-        }
-
-        .channel-logo {
-            width: 120px;
-            height: 180px;
-            object-fit: cover;
-            cursor: pointer;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
-        }
-
-        .search-box, .group-select {
-            margin-bottom: 20px;
             text-align: center;
+            cursor: pointer;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+            border-radius: 8px;
+            overflow: hidden;
         }
 
-        .search-box input, .group-select select {
+        .channel img {
+            width: 100%;
+            height: 100px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        .channel p {
+            color: #fff;
+            margin: 10px 0;
+            font-size: 1rem;
+        }
+
+        .group-select, .search-box {
+            margin-bottom: 20px;
+        }
+
+        .group-select select, .search-box input {
             padding: 10px;
             font-size: 1rem;
             border-radius: 25px;
@@ -110,47 +68,33 @@
             border: none;
             outline: none;
         }
-
-        .search-box input {
-            margin-bottom: 10px;
-        }
     </style>
 </head>
 <body>
-    <!-- Video Player -->
-    <div id="videoContainer">
-        <h1 id="current-channel-name">Live Stream</h1>
-        <div class="video-container" style="position: relative;">
-            <div id="liveIndicator">LIVE</div>
-            <video id="player" playsinline controls></video>
-        </div>
-        <div class="footer">
-            Website made by - <a href="https://t.me/StevoSure" target="_blank">StevoSure</a>
-        </div>
-    </div>
-
-    <!-- Search and Group Selection -->
-    <div class="search-box">
-        <input type="text" id="search-input" placeholder="Search channels...">
-    </div>
-
+    <h1>Channel List</h1>
+    
+    <!-- Group Selection -->
     <div class="group-select">
         <select id="group-select">
             <option value="all">All</option>
         </select>
     </div>
 
-    <div id="channel-list"></div>
+    <!-- Search Bar -->
+    <div class="search-box">
+        <input type="text" id="search-input" placeholder="Search channels...">
+    </div>
+
+    <!-- Channel List -->
+    <div class="channel-list" id="channel-list"></div>
 
     <script>
-        const CHANNELS_PER_PAGE = 50;
-        let channels = [];
-        let currentPage = 1;
+        let channels = [];  // Will hold all the channel data
         let currentGroup = 'all';
         let searchQuery = '';
 
-        // Fetch the M3U file and parse its content
-        fetch('abc.m3u') // Change to your actual M3U file path
+        // Fetch M3U data and parse it
+        fetch('abc.m3u')  // Replace with your actual M3U file path
             .then(response => response.ok ? response.text() : Promise.reject(response.statusText))
             .then(data => {
                 channels = parseM3U(data);
@@ -169,10 +113,9 @@
                 line = line.trim();
 
                 if (line.startsWith('#EXTINF:')) {
-                    // Push the last channel if there's any
-                    if (currentChannel.name) parsedChannels.push(currentChannel);
+                    if (currentChannel.name) parsedChannels.push(currentChannel);  // Save previous channel
 
-                    currentChannel = {}; // Reset for the new channel
+                    currentChannel = {};  // Reset for new channel
 
                     const nameMatch = line.match(/tvg-name="([^"]*)"/);
                     const logoMatch = line.match(/tvg-logo="([^"]*)"/);
@@ -182,20 +125,19 @@
                     if (logoMatch) currentChannel.logo = logoMatch[1].trim();
                     if (groupMatch) currentChannel.group = groupMatch[1].trim();
                 } else if (line && !line.startsWith('#')) {
-                    // The actual URL for the stream
                     currentChannel.url = line;
                 }
             });
 
-            // Push the last channel if it exists
-            if (currentChannel.name) parsedChannels.push(currentChannel);
+            if (currentChannel.name) parsedChannels.push(currentChannel);  // Push last channel
             return parsedChannels;
         }
 
-        // Populate group select options
+        // Populate group options
         function populateGroups() {
             const groupSelect = document.getElementById('group-select');
             const groups = Array.from(new Set(channels.map(channel => channel.group || 'Ungrouped')));
+
             groups.forEach(group => {
                 const option = document.createElement('option');
                 option.value = group;
@@ -204,10 +146,10 @@
             });
         }
 
-        // Display channels with pagination, search, and group filter
+        // Display channels based on search and group selection
         function displayChannels() {
             const container = document.getElementById('channel-list');
-            container.innerHTML = ''; // Clear current channels
+            container.innerHTML = '';  // Clear existing channels
 
             const filteredChannels = channels.filter(channel =>
                 (currentGroup === 'all' || channel.group === currentGroup) &&
@@ -218,7 +160,7 @@
                 const channelDiv = document.createElement('div');
                 channelDiv.classList.add('channel');
                 channelDiv.innerHTML = `
-                    <img src="${channel.logo}" alt="${channel.name}" class="channel-logo" onclick="playStream('${encodeURIComponent(channel.url)}', '${encodeURIComponent(channel.name)}')">
+                    <img src="${channel.logo}" alt="${channel.name}" onclick="playChannel('${encodeURIComponent(channel.url)}', '${encodeURIComponent(channel.name)}')">
                     <p>${channel.name}</p>
                 `;
                 container.appendChild(channelDiv);
@@ -228,54 +170,19 @@
         // Handle search input
         document.getElementById('search-input').addEventListener('input', (e) => {
             searchQuery = e.target.value;
-            currentPage = 1;
             displayChannels();
         });
 
         // Handle group selection
         document.getElementById('group-select').addEventListener('change', (e) => {
             currentGroup = e.target.value;
-            currentPage = 1;
             displayChannels();
         });
 
-        // Play stream by using the local player
-        function playStream(url, name) {
-            // Show the player container
-            document.getElementById('videoContainer').style.display = 'block';
-            document.getElementById('channel-list').style.display = 'none';
-            document.getElementById('current-channel-name').textContent = name;
-
-            const playerElement = document.getElementById('player');
-            const loader = document.createElement('div');
-            loader.classList.add('loader');
-            document.body.appendChild(loader);
-
-            const player = new Plyr(playerElement, {
-                autoplay: true,
-                controls: ['play', 'progress', 'current-time', 'mute', 'volume', 'fullscreen'],
-                muted: false
-            });
-
-            if (Hls.isSupported() && url) {
-                const hls = new Hls();
-                hls.loadSource(url);
-                hls.attachMedia(playerElement);
-
-                loader.style.display = 'block';
-
-                hls.on(Hls.Events.MANIFEST_PARSED, function () {
-                    loader.style.display = 'none';
-                });
-
-                hls.on(Hls.Events.ERROR, function (event, data) {
-                    console.error('HLS.js Error:', data.details);
-                    loader.style.display = 'none';
-                });
-            } else {
-                playerElement.src = url;
-                loader.style.display = 'none';
-            }
+        // Play selected channel
+        function playChannel(url, name) {
+            const playerUrl = `player.html?url=${url}&name=${name}`;
+            window.location.href = playerUrl;  // Redirect to player page
         }
     </script>
 </body>
