--- a/player.html
+++ b/player.html
@@ -3,141 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playing Channel...</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
+    <title>Live Stream Player</title>
     <style>
         body {
-            background: linear-gradient(145deg, #121212, #2c2c2c);
+            background: #121212;
             color: white;
             font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
-            min-height: 100vh;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-
-        #videoContainer {
-            max-width: 900px;
-            width: 95%;
-            background: rgba(30, 30, 30, 0.95);
-            border-radius: 20px;
-            padding: 20px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.7);
+        #player {
+            width: 80%;
+            max-width: 800px;
+            border-radius: 10px;
+            background: #333;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
         }
-
         h1 {
             text-align: center;
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-            color: #f7f7f7;
-        }
-
-        #player {
-            border-radius: 15px;
-            width: 100%;
-            height: auto;
-        }
-
-        .loader {
-            display: none;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 50px;
-            height: 50px;
-            border: 5px solid rgba(255, 255, 255, 0.3);
-            border-top: 5px solid #fff;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-        }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-
-        .footer {
-            font-size: 0.9rem;
-            margin-top: 30px;
-            color: rgba(255, 255, 255, 0.6);
-        }
-
-        .footer a {
-            color: #1a73e8;
-            text-decoration: none;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
+            font-size: 2rem;
+            margin: 20px;
         }
     </style>
 </head>
 <body>
-    <div id="videoContainer">
-        <h1 id="channel-name">Live Stream</h1>
-        <div class="video-container" style="position: relative;">
-            <video id="player" playsinline controls></video>
-            <div class="loader" id="loader"></div>
-        </div>
-    </div>
-
-    <div class="footer">
-        Website made by - <a href="https://t.me/StevoSure" target="_blank">StevoSure</a>
+    <div>
+        <h1 id="channel-name">Loading...</h1>
+        <video id="player" controls autoplay></video>
     </div>
 
     <script>
+        // Extract URL and name from query parameters
         const params = new URLSearchParams(window.location.search);
         const streamUrl = decodeURIComponent(params.get('url'));
-        const channelName = decodeURIComponent(params.get('name')) || "Live Stream";
+        const channelName = decodeURIComponent(params.get('name')) || 'Live Stream';
+
+        // Set the channel name
         document.getElementById('channel-name').innerText = channelName;
 
-        const loader = document.getElementById('loader');
         const playerElement = document.getElementById('player');
 
+        // Initialize the player
         function initializePlayer(sourceUrl) {
-            const player = new Plyr(playerElement, {
-                autoplay: true,
-                controls: ['play', 'progress', 'current-time', 'mute', 'volume', 'fullscreen'],
-                muted: false
-            });
-
             if (Hls.isSupported() && sourceUrl) {
                 const hls = new Hls();
                 hls.loadSource(sourceUrl);
-                hls.attachMedia(player.media);
-
-                loader.style.display = 'block';
-
+                hls.attachMedia(playerElement);
                 hls.on(Hls.Events.MANIFEST_PARSED, function () {
-                    loader.style.display = 'none';
+                    console.log("HLS Stream loaded");
                 });
-
-                hls.on(Hls.Events.ERROR, function (event, data) {
-                    console.error('HLS.js Error:', data.details);
-                    loader.style.display = 'none';
-                });
-            } else {
+            } else if (sourceUrl) {
                 playerElement.src = sourceUrl;
-                loader.style.display = 'none';
+            } else {
+                alert("Stream URL is invalid.");
             }
         }
 
+        // Initialize player with the provided URL
         if (streamUrl) {
             initializePlayer(streamUrl);
         } else {
-            alert("Invalid stream URL.");
+            alert("Invalid stream URL. Please check the link.");
         }
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </body>
 </html>
