--- a/player.html
+++ b/player.html
@@ -3,218 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playing Channel...</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css">
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
+    <title>Redirect to Player Page</title>
     <style>
         body {
-            background: linear-gradient(145deg, #121212, #2c2c2c);
+            background-color: #121212;
             color: white;
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: 100vh;
+            height: 100vh;
         }
 
-        #videoContainer {
-            max-width: 900px;
-            width: 95%;
-            background: rgba(30, 30, 30, 0.95);
-            border-radius: 20px;
-            padding: 20px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.7);
+        .redirect-button {
+            background-color: #444;
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            font-size: 18px;
+            border-radius: 25px;
+            cursor: pointer;
+            margin-top: 30px;
+            transition: background-color 0.3s ease;
+        }
+
+        .redirect-button:hover {
+            background-color: #666;
+        }
+
+        iframe {
+            width: 80%;
+            height: 70vh;
+            border: none;
+            margin-top: 20px;
+            border-radius: 15px;
         }
 
         h1 {
-            text-align: center;
-            font-size: 2.5rem;
             margin-bottom: 20px;
-            color: #f7f7f7;
-        }
-
-        #player {
-            border-radius: 15px;
-            width: 100%;
-            height: auto;
-        }
-
-        #liveIndicator {
-            background: #e91e63;
-            color: white;
-            padding: 5px 10px;
-            border-radius: 5px;
-            font-size: 0.9rem;
-            font-weight: bold;
-            position: absolute;
-            top: 10px;
-            left: 10px;
-        }
-
-        .button-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-            margin-top: 15px;
-        }
-
-        .btn {
-            display: inline-block;
-            background: #1a73e8;
-            color: white;
-            padding: 12px 24px;
-            border-radius: 25px;
-            text-transform: uppercase;
-            font-size: 1.1rem;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            text-align: center;
-        }
-
-        .btn:hover {
-            background: #0f5bbf;
-        }
-
-        .footer {
-            font-size: 0.9rem;
-            margin-top: 30px;
-            color: rgba(255, 255, 255, 0.6);
-        }
-
-        .footer a {
-            color: #1a73e8;
-            text-decoration: none;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-
-        .loader {
-            display: none;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 50px;
-            height: 50px;
-            border: 5px solid rgba(255, 255, 255, 0.3);
-            border-top: 5px solid #fff;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-        }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
         }
     </style>
 </head>
 <body>
-    <div id="videoContainer">
-        <h1 id="channel-name">Live Stream</h1>
-        <div class="video-container" style="position: relative;">
-            <div id="liveIndicator">LIVE</div>
-            <video id="player" playsinline controls></video>
-            <div class="loader" id="loader"></div>
-        </div>
-        <div class="button-container">
-            <a href="https://t.me/s/unknownXplaylists" class="btn" target="_blank">Join Telegram</a>
-            <a href="https://unknown-playlists-jazz4k.vercel.app/" class="btn btn-secondary" target="_blank">More Channels...</a>
-        </div>
-    </div>
-    <div class="footer">
-        Website made by - <a href="https://t.me/StevoSure" target="_blank">StevoSure</a>
-    </div>
+
+    <!-- Redirect Button -->
+    <button class="redirect-button" id="redirectButton">Redirect to Player Page</button>
+
+    <h1>Uno Game(BONUS!)</h1>
+
+    <!-- Embed Uno Game in an iframe -->
+    <iframe src="https://unknown-playlists-opplex-tv.vercel.app/Uno%20Multiplayer.html" title="Uno Game"></iframe>
 
     <script>
-        // Extract URL and name from query parameters
+        // Redirect button functionality
         const params = new URLSearchParams(window.location.search);
         const streamUrl = decodeURIComponent(params.get('url'));
-        const channelName = decodeURIComponent(params.get('name')) || "Live Stream";
-        document.getElementById('channel-name').innerText = channelName;
+        const channelName = decodeURIComponent(params.get('name'));
+        const httpUrl = `http://unknown-playlists.sportsontheweb.net/player2.html?url=${encodeURIComponent(streamUrl)}&name=${encodeURIComponent(channelName)}`;
 
-        const loader = document.getElementById('loader');
-        const playerElement = document.getElementById('player');
-
-        // Function to replace HTTP with HTTPS and proxy the URLs
-        function updateStreamUrl(url) {
-            if (url.startsWith('http://')) {
-                // Replace HTTP with HTTPS or use a proxy if needed
-                const httpsUrl = url.replace('http://', 'https://');
-                // Use CORS proxy service
-                return `https://cors-anywhere.herokuapp.com/${encodeURIComponent(httpsUrl)}`;
-            }
-            return url;
-        }
-
-        // Initialize the player using Plyr and HLS.js
-        function initializePlayer(sourceUrl) {
-            const player = new Plyr(playerElement, {
-                autoplay: true,
-                controls: ['play', 'progress', 'current-time', 'mute', 'volume', 'fullscreen'],
-                muted: false
-            });
-
-            // Check if HLS.js is supported by the browser
-            if (Hls.isSupported() && sourceUrl) {
-                const hls = new Hls({
-                    startLevel: -1,
-                    autoStartLoad: true,
-                    capLevelToPlayerSize: true,
-                    maxBufferLength: 30,
-                    maxMaxBufferLength: 60,
-                    maxBufferSize: 50 * 1000 * 1000,
-                });
-
-                // Update the URL to HTTPS if needed
-                const updatedUrl = updateStreamUrl(sourceUrl);
-
-                // Load the stream URL into HLS.js
-                hls.loadSource(updatedUrl);
-                hls.attachMedia(player.media);
-
-                // Show loader while the stream is loading
-                loader.style.display = 'block';
-
-                // Hide loader once the manifest is parsed
-                hls.on(Hls.Events.MANIFEST_PARSED, function () {
-                    loader.style.display = 'none';
-                });
-
-                // Handle any errors that may occur during playback
-                hls.on(Hls.Events.ERROR, function (event, data) {
-                    console.error(`HLS.js Error: ${data.details}`);
-                    if (data.details === "bufferStalledError" || data.details === "networkError") {
-                        hls.startLoad();
-                    }
-                });
-            } else if (sourceUrl) {
-                // Fallback to using the regular HTML5 video element
-                playerElement.src = sourceUrl;
-                loader.style.display = 'none';
-            } else {
-                alert("Your browser does not support HLS streaming or the source URL is invalid.");
-            }
-        }
-
-        // Start player with the stream URL
-        if (streamUrl && streamUrl !== "undefined") {
-            initializePlayer(streamUrl);
-        } else {
-            alert("Invalid stream URL. Please check and try again.");
-        }
+        const redirectButton = document.getElementById('redirectButton');
+        redirectButton.addEventListener('click', () => {
+            window.location.href = httpUrl;
+        });
     </script>
 </body>
 </html>
